--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+ /* overflow-y: hidden; /* Hide vertical scrollbar */
+ /* overflow-x: hidden; /* Hide horizontal scrollbar */
+}
+
 /* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
